# photobomb

./: .gitignore  Makefile  Pipfile  README.md  go.mod  go.sum  main.py  package-lock.json  package.json  photobomb.py  photobooth.py  photobooth_server.py  pyproject.toml  requirements.txt  setup.cfg  test.py
cli/: main.go
lib/: assembly.py  detection.py  display.py  effect.py  mms.py  mode.py  photobooth.py  printer.py  s3.py  webcam_video.py
old/: photobomb.py  piggybooth_server.py
resources/casey/: casey_1.xcf  casey_2.xcf  casey_3.xcf  casey_4.xcf  casey_5.xcf  casey_7.xcf  casey_8.xcf  casey_9.xcf  casey_logo.xcf  corner_casey_1.xcf  corner_casey_2.xcf
