[metadata]
name = spooky photobooth
url = "https://github.com/roryj/photobomb"
license = MIT
description = spooky photobooth
long_description = file: README.md
classifiers =
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython

[options]
python_requires = >=3.8
packages = find:
zip_safe = false
include_package_data = true
install_requires =
    numpy==1.21.2
    pillow==8.3.2
    face-recognition==1.3.0 
    scikit-image==0.18.3 
    scipy==1.7.1
    opencv-python==4.5.3.56

[options.entry_points]
console_scripts =
    photobooth = lib.something:main

[bdist_wheel]
universal = 1

[flake8]
max-line-length = 120
exclude = build/*, dist/*, *.egg-info/*, .venv/*, .git/*, .eggs/*
extend-ignore = E203  # E203 conflicts with PEP8; see https://github.com/psf/black#slices


# flake8-pytest-style
# PT001:
pytest-fixture-no-parentheses = true
# PT006:
pytest-parametrize-names-type = tuple
# PT007:
pytest-parametrize-values-type = tuple
pytest-parametrize-values-row-type = tuple

