[metadata]
name = photobooth
url = https://github.com/roryj/photobooth
license = MIT
description = Spooky photobooth implementation
classifiers =
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython

[options]
python_requires = >=3.9
packages = find:
zip_safe = false
include_package_data = true
install_requires =
    pillow==8.3.2
    face-recognition==1.3.0 
    opencv-python==4.5.3.56
    pynput==1.7.6 
    requests==2.31.0

[bdist_wheel]
universal = 1

[flake8]
max-line-length = 120
exclude = build/*, dist/*, .venv/*, .git/*, .eggs/*
extend-ignore = E203  # E203 conflicts with PEP8; see https://github.com/psf/black#slices


# flake8-pytest-style
# PT001:
pytest-fixture-no-parentheses = true
# PT006:
pytest-parametrize-names-type = tuple
# PT007:
pytest-parametrize-values-type = tuple
pytest-parametrize-values-row-type = tuple

